fix: Purchase API swagger 문서 수정
