# back/swagger/productAPI.yaml
@@ -135,102 +135,102 @@
 
 /api/product/purchase:
     post:
-    tags:
-      - product
-    summary: 상품 구매하기
-    parameters:
-      - name: Authorization
-        in: header
-        required: true
-      - name: body
-        in: body
-        required: true
-        schema:
-          type: object
-          properties:
-            authPayment:
-              type: object
-              properties:
-                imp_uid:
-                  type: string
-                  example: 1
-                Merchant_uid:
-                  type: string
-                  example: 1
-            orderList:
-              type: array
-              items:
+      tags:
+        - product
+      summary: 상품 구매하기
+      parameters:
+        - name: Authorization
+          in: header
+          required: true
+        - name: body
+          in: body
+          required: true
+          schema:
+            type: object
+            properties:
+              authPayment:
                 type: object
                 properties:
-                  ProductId:
+                  imp_uid:
                     type: string
-                    example: 2
-                  price:
+                    example: 1
+                  Merchant_uid:
                     type: string
-                    example: 132100
-                  amount:
-                    type: string
-                    example: 3
-                  ProductMainTagId:
-                    type: string
-                    example: 3
-                  ProductSubTagId:
-                    type: string
-                    example: 4
-    responses:
-      200:
-        $ref: "./openapi.yaml#/success"
-      400:
-        description: 상품 조회 결과가 없을 경우
-        schema:
-          properties:
-            message:
-              type: string
-              example: 상품에 대한 식별 번호가 지급되지 않았습니다 구매할 상품에 대한 상품 식별 번호를 넘겨주세요
-      401:
-        description: 주문 번호가 지급되지 않았을 경우
-        schema:
-          properties:
-            message:
-              type: string
-              example: 주문 번호가 지급되지 않았습니다 주문 번호를 넘겨주세요
-      402:
-        description: uniqueKey가 지급되지 않았읋 경우
-        schema:
-          properties:
-            message:
-              type: string
-              example: uniqueKey가 지급되지 않았습니다. uniqueKey를 넘겨주세요
-      403:
-        description: 가격 정보가 지급되지 않았을 경우
-        schema:
-          properties:
-            message:
-              type: string
-              example: 가격 정보가 지급되지 않았습니다. 가격 정보를 넘겨주세요
-      405:
-        description: 실제 결제 금액과 넘겨준 상품의 가격이 다를 경우
-        schema:
-          properties:
-            message:
-              type: string
-              example: 위조된 결제 시도입니다 
-      406:
-        description: 구매갯수가 지급되지 않았을 경우
-        schema:
-          properties:
-            message:
-              type: string
-              example: 구매갯수 정보가 지급되지 않았습니다. 가격 정보를 넘겨주세요
-      407:
-        description: 같은 옵션으로 상품을 주문할 경우
-        schema:
-          properties:
-            message:
-              type: string
-              example: 이미 접수된 주문입니다
-      500:
-        $ref: "./openapi.yaml#/serverError"
+                    example: 1
+              orderList:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    ProductId:
+                      type: string
+                      example: 2
+                    price:
+                      type: string
+                      example: 132100
+                    amount:
+                      type: string
+                      example: 3
+                    ProductMainTagId:
+                      type: string
+                      example: 3
+                    ProductSubTagId:
+                      type: string
+                      example: 4
+      responses:
+        200:
+          $ref: "./openapi.yaml#/success"
+        400:
+          description: 상품 조회 결과가 없을 경우
+          schema:
+            properties:
+              message:
+                type: string
+                example: 상품에 대한 식별 번호가 지급되지 않았습니다 구매할 상품에 대한 상품 식별 번호를 넘겨주세요
+        401:
+          description: 주문 번호가 지급되지 않았을 경우
+          schema:
+            properties:
+              message:
+                type: string
+                example: 주문 번호가 지급되지 않았습니다 주문 번호를 넘겨주세요
+        402:
+          description: uniqueKey가 지급되지 않았읋 경우
+          schema:
+            properties:
+              message:
+                type: string
+                example: uniqueKey가 지급되지 않았습니다. uniqueKey를 넘겨주세요
+        403:
+          description: 가격 정보가 지급되지 않았을 경우
+          schema:
+            properties:
+              message:
+                type: string
+                example: 가격 정보가 지급되지 않았습니다. 가격 정보를 넘겨주세요
+        405:
+          description: 실제 결제 금액과 넘겨준 상품의 가격이 다를 경우
+          schema:
+            properties:
+              message:
+                type: string
+                example: 위조된 결제 시도입니다 
+        406:
+          description: 구매갯수가 지급되지 않았을 경우
+          schema:
+            properties:
+              message:
+                type: string
+                example: 구매갯수 정보가 지급되지 않았습니다. 가격 정보를 넘겨주세요
+        407:
+          description: 같은 옵션으로 상품을 주문할 경우
+          schema:
+            properties:
+              message:
+                type: string
+                example: 이미 접수된 주문입니다
+        500:
+          $ref: "./openapi.yaml#/serverError"
 
 /api/product/addCart:
     post:
